--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="src/spigot-api-1.16.4-R0.1-20201118.232026-23-shaded.jar"/>
-	<classpathentry kind="lib" path="src/NeoCore.jar"/>
 	<classpathentry kind="lib" path="src/ChatControl-Red-10.12.7.jar"/>
 	<classpathentry kind="lib" path="src/towny-0.98.3.4.jar"/>
+	<classpathentry kind="lib" path="src/NeoCore-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
